# sana

./: AGENTS.md  USAGE.md  implementation_plan.md
.agents/skills/bash/: SKILL.md
.agents/skills/crud_pattern_rule/: SKILL.md
.clinerules/: architecture.md  backend.md  codebase-memory-mcp.md  frontend.md  security.md  testing.md
.clinerules/query-and-performance/: SKILL.md
.clinerules/restful-api-design/: SKILL.md
.clinerules/semantic-commits/: SKILL.md
backend/: .clineignore  .gitignore  COMPREHENSIVE_REVIEW.md  Dockerfile  FEATURES.md  README.md  conftest.py  create_test_users.py  db.sqlite3  docker-compose.yml  gunicorn.conf.py  implementation_plan.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  sample.presentation.ts  token.txt
backend/.github/workflows/: ci.yml
backend/alerts/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/alerts/migrations/: 0001_initial.py
backend/charts/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/charts/migrations/: 0001_initial.py  0002_add_gauge_funnel_treemap_radar.py  0003_chart_drill_down_config.py  0004_chartannotation.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  development.py  production.py  test.py
backend/core/: __init__.py  base_exception.py  celery.py  context_processors.py  middleware.py  permissions.py  response.py  schema.py  serializers.py
backend/core/tests/: test_e2e_scenarios.py  test_exceptions.py  test_middleware.py  test_pagination.py  test_permissions.py  test_validators.py
backend/core/utils/: pagination.py  validators.py
backend/dashboards/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/dashboards/migrations/: 0001_initial.py  0002_add_dashboard_filters.py  0003_dashboard_is_public_dashboardpermission.py
backend/datasets/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/datasets/management/commands/: seed_data.py
backend/datasets/migrations/: 0001_initial.py  0002_add_datasource_fk.py
backend/datasource_files/: file
backend/datasources/: __init__.py  admin.py  apps.py  connectors.py  encryption.py  models.py  serializers.py  tasks.py  test_connectors.py  tests.py  urls.py  views.py
backend/datasources/migrations/: 0001_initial.py  0002_add_csvimportjob.py  0003_add_auto_sync_csv_config.py
backend/docs/: CRUD_Patterns_Guide.md  Development_Guidelines.md  Documentation_Structure.md  RESTful_API_Guidelines.md
backend/locale/en/LC_MESSAGES/: django.po
backend/locale/fa/LC_MESSAGES/: django.mo  django.po
backend/management/: tests.py
backend/management/management/commands/: generate_ts.py
backend/management/management/commands/partials/: api_generator.py  base.py  drf_mapper.py  extract_path.py  generate_ts_files.py  interface_generator.py  presentation_generator.py  service_interface_generator.py
backend/media/datasource_files/: sample_data.csv
backend/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
backend/query/: apps.py  tests.py  urls.py  views.py
backend/reports/: admin.py  models.py  serializers.py  services.py  tasks.py  test_tasks.py  tests.py  urls.py  views.py
backend/reports/migrations/: 0001_initial.py  0002_reporthistory.py
backend/templates/reports/: dashboard_report.html
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
planning-archive/: backend-refactor.md  init-plan.md
(+64 files in other folders)
